# tokenbel-pdf

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md
pdf_pipeline/: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  ci-check.sh  coverage.sh
pdf_pipeline/docs/: cli-contract.md
pdf_pipeline/tbel-pdf/: Cargo.toml  LICENSE  README.md
pdf_pipeline/tbel-pdf/prompts/: financial_date_extraction.txt
pdf_pipeline/tbel-pdf/src/: cleaner.rs  date.rs  error.rs  lib.rs  markdown.rs  normalization.rs  ocr.rs  pdf.rs  processing.rs  report_cleaning.rs  scraper.rs  table_extraction.rs  types.rs  wasm_bridge.rs
pdf_pipeline/tbel-pdf/src/adapters/: markdown.rs  mod.rs  ocr.rs  pdf.rs  scraper.rs
pdf_pipeline/tbel-pdf/src/commands/: mod.rs  pipeline.rs
pdf_pipeline/tbel-pdf/src/contract/: mod.rs
pdf_pipeline/tbel-pdf/src/models/: cleaned_report.rs  code_value.rs  mod.rs  ocr_output.rs  pdf_input.rs  report_table.rs  report_type.rs
pdf_pipeline/tbel-pdf/tests/: pipeline.rs  worker_smoke.mjs
pdf_pipeline/tests/fixtures/: manifest.json  manifest.lock.json
pdf_pipeline/tests/fixtures/ocr/: file111_income_statement.md  file122_balance_sheet.md  file133_cashflow.md
pdf_pipeline/tests/fixtures/source_of_truth/: 2025.09_balance_sheet_data_e2fea0ea.xlsx  2025.09_income_statement_data_e2fea0ea.xlsx  2025.09_statement_cash_flow_data_e2fea0ea.xlsx
pdf_pipeline/tests/golden/: date_translation_failure.json  date_translation_failure.xlsx  malformed_ocr.json  malformed_ocr.xlsx  merged_table_pdf.json  merged_table_pdf.xlsx  native_pdf.json  native_pdf.xlsx  no_table.json  scanned_pdf.json  scanned_pdf.xlsx  statement_equity_changes.json  statement_equity_changes.xlsx  under_dimension_columns.json  under_dimension_columns.xlsx  under_dimension_rows.json  under_dimension_rows.xlsx  unsupported_layout.json  unsupported_layout.xlsx
