[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TBel Team"]
license = "MIT"
repository = "https://github.com/Red-Panda-Dev/tbel"
homepage = "https://github.com/Red-Panda-Dev/tbel"
rust-version = "1.70"

[workspace]
members = [
    "tbel-pdf",
]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
regex = "1.10"
once_cell = "1.19"
