[package]
name = "tbel-pdf"
version = "0.1.1"
edition = "2021"
authors = ["TBel team"]
license = "MIT"
repository = "https://github.com/Red-Panda-Dev/tokenbel-pdf"
homepage = "https://dashboard.tokenbel.info/"
rust-version = "1.94"
description = "PDF processing pipeline for Belarusian financial reports with OCR, table extraction, and data normalization"
readme = "README.md"
keywords = ["pdf", "ocr", "data-extraction", "xlsx", "mistral"]
categories = ["parser-implementations", "finance", "command-line-utilities"]

[features]
default = []
cli = ["clap", "anyhow", "tracing-subscriber", "rust_xlsxwriter", "tokio"]

[dependencies]
# Core dependencies
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
regex = "1.10"
once_cell = "1.19"

# Adapters dependencies
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hashbrown = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.22"
lopdf = "0.34"
base64 = "0.22"

# CLI dependencies (optional)
clap = { version = "4.5", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
rust_xlsxwriter = { version = "0.79", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[dev-dependencies]
rstest = "0.23"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "tbel-pdf"
path = "src/bin/tbel-pdf.rs"
required-features = ["cli"]
