[package]
name = "tbel-pdf"
version = "0.1.3"
edition = "2021"
authors = ["TBel team"]
license = "MIT"
repository = "https://github.com/Red-Panda-Dev/tokenbel-pdf"
homepage = "https://dashboard.tokenbel.info/"
rust-version = "1.94"
description = "PDF processing pipeline for Belarusian financial reports with OCR, table extraction, and data normalization"
readme = "README.md"
keywords = ["pdf", "ocr", "data-extraction", "xlsx", "mistral"]
categories = ["parser-implementations", "finance", "command-line-utilities"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
cli = ["clap", "tracing-subscriber", "rust_xlsxwriter", "tokio"]

[dependencies]
# Common dependencies (compile on both native and wasm32)
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
regex = "1.10"
once_cell = "1.19"
async-trait = "0.1"
hashbrown = "0.15"
base64 = "0.22"
anyhow = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.22"
lopdf = "0.34"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.clap]
version = "4.5"
features = ["derive"]
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tracing-subscriber]
version = "0.3"
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.rust_xlsxwriter]
version = "0.94"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies.rust_xlsxwriter]
version = "0.94"
features = ["wasm"]

[dev-dependencies]
rstest = "0.23"
tempfile = "3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[bin]]
name = "tbel-pdf"
path = "src/bin/tbel-pdf.rs"
required-features = ["cli"]
